# scan_matching_tutorial

./: CMakeLists.txt  README.md  gjwogj.fewf
apps/: 01_eign_tester.cpp  02_csv_points_rotation.cpp
data/: rectangle_points 10.csv  rectangle_points10_rotated.csv
scripts/: plot_points.py  polt_points.py
